--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -10,7 +10,9 @@
 
 <div class="example-wrapper">
 	<h1>{{ product.name }}</h1>
-	<small> {{ product.price}}</small>
+	<h6>  $ {{ product.price}}</h6>
+	<p>{{ product.description }}</p>
+
 	<div> <small> {{ category.name }}</small></div>
 
 	<div> <small> {{ user.username }}</small></div>
