--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -20,7 +20,7 @@
     <div class="col-md-8">
         <form action="{{ path('login') }}" method="post">
             <div class="form-group">
-                <label for="username">Username:</label>
+                <label for="username">Email:</label>
                 <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" />
             </div>
             
